--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       },
       {
         title: "2. Website Kartu Informasi",
-        img: "https://via.placeholder.com/800x300?text=Kartu+Informasi",
+        img: "Krem Cokelat Vintage Scrapbook Perkenalan Diri Presentasi(1).png",
         desc: "Desain kartu nama atau kartu identitas menggunakan HTML dan CSS dengan layout menarik.",
         link: "kartu_informasi.html"
       },
@@ -191,4 +191,5 @@
   </script>
 </body>
 </html>
+
   
