--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       },
       {
         title: "2. Website Kartu Informasi",
-        img: "Krem Cokelat Vintage Scrapbook Perkenalan Diri Presentasi(1).png",
+        img: "Fakta FAKTA MENARIK HEWAN.png",
         desc: "Desain kartu nama atau kartu identitas menggunakan HTML dan CSS dengan layout menarik.",
         link: "kartu_informasi.html"
       },
@@ -193,3 +193,4 @@
 </html>
 
   
+
