--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
       },
       {
         title: "6. Website Jadwal Pelajaran",
-        img: "https://via.placeholder.com/800x300?text=Jadwal+Pelajaran",
+        img: "Welcome.png",
         desc: "Tabel interaktif berisi jadwal pelajaran mingguan dengan tampilan rapi dan warna-warna menarik.",
-        link: "#"
+        link: "jadwal.html"
       },
       {
         title: "7. Website Project Akhir",
@@ -193,4 +193,5 @@
 </html>
 
   
+
 
